fix: [RGOeX-26367] Fix for discussions header, which overlaps the tabs navigation

--- a/paragon/blocks/_header.scss
+++ b/paragon/blocks/_header.scss
@@ -3,7 +3,7 @@
     header.learning-header {
         box-shadow: 0 0 6px 0 rgba($black, .75);
         padding: $header-vertical-padding 0;
-        z-index: 3;
+        z-index: 4;
 
         .logo {
             padding: 0;
